# DDC

./: README.md  pyproject.toml
.kiro/specs/pdf-content-extraction/: design.md  requirements.md  tasks.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/pipeline_optimization_20260107/: metadata.json  plan.md  spec.md
data_ingestion2/: enrich_markdown.py
data_ingestion2/notebooks/: content_extraction.ipynb
data_ingestion2/pdf_parse/: doclayout.py  ocr_process.py  snapshot.toon  utils.py
data_ingestion2/prompts/: figure_prompt.txt  isolate_formula_prompt.txt  table_prompt.txt
kb/: agent0_extracted.md
zenml_flow/: run_pipeline.py
zenml_flow/pipeline/: visual_pipeline.py
zenml_flow/steps/: pdf_ingestion.py
